Server: now running with docker